--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
