--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: yesjjin99/dnd-bpm
+          images: teambpm2023/dnd-bpm
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
