hotfix: docker compose 태그 붙여서 가져오도록 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   web:
     container_name: web
-    image: teambpm2023/dnd-bpm
+    image: teambpm2023/dnd-bpm:main
     expose:
       - "8080"
     ports:
