hotfix: recommends 오류 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,44 +1,12 @@
-## swagger-ui custom path
-#springdoc.swagger-ui.path=/swagger-ui
-## DB
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.jpa.database=postgresql
-#spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.format_sql=true
-#env
-spring.environment=local
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui
 # DB
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/dnd
-spring.datasource.username=yejin
-spring.datasource.password=4518
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-
-# token
-bpm.token.expiry = 3000000
-bpm.token.key = iGJ0TtXHJjPOk7V+DwJhd/vxV8C1sBhIM+g79Br1OyM
-
-# s3
-aws.s3.endpointUrl=https://s3.amazonaws.com
-aws.s3.accessKey=AKIATXZ6ISXZEL5GQFOU
-aws.s3.secretKey=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
-aws.s3.region=ap-northeast-2
-aws.s3.bucketName=dnd-bpm-bucket
-
-
-# s3 image path
-bpm.s3.bucket.base=https://dnd-bpm-bucket.s3.ap-northeast-2.amazonaws.com/
-bpm.s3.bucket.profile.path=profiles/
-bpm.s3.bucket.bodyshape.path=bodyshapes/
-bpm.s3.bucket.review.path=reviews/
